# EPICAL-Analysis-Project

./: .gitignore  CMakeLists.txt  README.md  test.cxx
include/: EPICALAnalysisObject.h  EPICALConversions.h  EPICALGeometry.h  EPICALUtility.h  mTowerAnalysisObject.h  mTowerConversions.h  mTowerGeometry.h  mTowerUtility.h  myStyle.h  testClass.h
input/deadpixels_classification/: deadpixels_chipID_col_row.txt
input/noisypixels_beam/: outMaskPtn_TB_1R0_GeV.txt  outMaskPtn_TB_2R0_GeV.txt  outMaskPtn_TB_3R0_GeV.txt  outMaskPtn_TB_4R0_GeV.txt  outMaskPtn_TB_5R0_GeV.txt  outMaskPtn_TB_5R8_GeV.txt  outMaskPtn_TB_AND.txt  outMaskPtn_TB_OR.txt
input/noisypixels_classification/: noisypixels_chipID_col_row.txt
install/: README.md
lib/: README.md
output/rootfiles/hitmaps/Run_1232/: hitmap_Run1232.root
output/rootfiles/hitmaps/Run_1246/: hitmap_Run1246.root
output/rootfiles/hitmaps/Run_1303/: hitmap_Run1303.root
output/rootfiles/hitmaps/Run_1311/: hitmap_Run1311.root
output/rootfiles/hitmaps/Run_1332/: hitmap_Run1332.root
output/rootfiles/hitmaps/Run_1340/: hitmap_Run1340.root
output/rootfiles/hitmaps/Run_1356/: hitmap_Run1356.root
output/rootfiles/hitmaps/Run_1374/: hitmap_Run1374.root
output/rootfiles/hitmaps/Run_1395/: hitmap_Run1395.root
output/rootfiles/hitmaps/Run_1421/: hitmap_Run1421.root
output/rootfiles/hitmaps/Run_1438/: hitmap_Run1438.root
output/rootfiles/hitmaps/Run_1463/: hitmap_Run1463.root
output/rootfiles/hitmaps/Run_1750/: hitmap_Run1750.root
output/rootfiles/hitmaps/Run_1751/: hitmap_Run1751.root
output/rootfiles/pixelmasks/: commonpixelmask.root
output/rootfiles/pixelmasks/combined/Run_1250/: combinedpixelmask_Run1250.root
output/rootfiles/pixelmasks/combined/Run_1251/: combinedpixelmask_Run1251.root
output/rootfiles/pixelmasks/combined/Run_1252/: combinedpixelmask_Run1252.root
output/rootfiles/pixelmasks/combined/Run_1253/: combinedpixelmask_Run1253.root
output/rootfiles/pixelmasks/combined/Run_1257/: combinedpixelmask_Run1257.root
output/rootfiles/pixelmasks/combined/Run_1260/: combinedpixelmask_Run1260.root
output/rootfiles/pixelmasks/combined/Run_1261/: combinedpixelmask_Run1261.root
output/rootfiles/pixelmasks/combined/Run_1262/: combinedpixelmask_Run1262.root
output/rootfiles/pixelmasks/combined/Run_1263/: combinedpixelmask_Run1263.root
output/rootfiles/pixelmasks/combined/Run_1274/: combinedpixelmask_Run1274.root
output/rootfiles/pixelmasks/combined/Run_1276/: combinedpixelmask_Run1276.root
output/rootfiles/pixelmasks/combined/Run_1308/: combinedpixelmask_Run1308.root
output/rootfiles/pixelmasks/combined/Run_1309/: combinedpixelmask_Run1309.root
output/rootfiles/pixelmasks/combined/Run_1310/: combinedpixelmask_Run1310.root
output/rootfiles/pixelmasks/combined/Run_1333/: combinedpixelmask_Run1333.root
output/rootfiles/pixelmasks/combined/Run_1335/: combinedpixelmask_Run1335.root
output/rootfiles/pixelmasks/combined/Run_1336/: combinedpixelmask_Run1336.root
output/rootfiles/pixelmasks/combined/Run_1337/: combinedpixelmask_Run1337.root
output/rootfiles/pixelmasks/combined/Run_1338/: combinedpixelmask_Run1338.root
output/rootfiles/pixelmasks/combined/Run_1339/: combinedpixelmask_Run1339.root
output/rootfiles/pixelmasks/combined/Run_1341/: combinedpixelmask_Run1341.root
output/rootfiles/pixelmasks/combined/Run_1343/: combinedpixelmask_Run1343.root
output/rootfiles/pixelmasks/combined/Run_1344/: combinedpixelmask_Run1344.root
output/rootfiles/pixelmasks/manualmask/: manualpixelmask.root
src/classes/: EPICALAnalysisObject.cxx  EPICALGeometry.cxx  mTowerAnalysisObject.cxx  mTowerGeometry.cxx  myStyle.cxx  testClass.cxx
src/macros/: Init.cxx  draw_hitmapoverview.cxx  draw_pixelmaskoverview.cxx  produce_all.cxx  produce_commonpixelmask.cxx  test.cxx
(+83 files in other folders)
